MSE: Deduplicate auto_update_timestamp_offset and generate_timestamps_flag

Since these two flags should map 1:1 to each other, this change removes
the former in favor of the latter, which is reachable from
SourceBufferState even before OnSourceInitDone has occurred.  It also
notes a pre-existing spec incompliance with newly filed crbug 850316.

BUG=607372,850316

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I83d10db6b7c367615f5b968447dbdb415aee5cb7
Reviewed-on: https://chromium-review.googlesource.com/1089494
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Commit-Queue: Matthew Wolenetz <wolenetz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565355}
Former-commit-id: e1119a8b0c01026a0b57ec3a0500ffb86141e803